# gitchef

./: .gitignore  .releaserc.json  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
e2e/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  wdio.conf.js
e2e/fixtures/: repo.js
e2e/specs/: 00-warmup.e2e.js  conflict.e2e.js  tabColor.e2e.js  virtualization.e2e.js
plans/: p1-remote-features.md
scripts/: build-manifest.mjs  bump-version.mjs  gen-demo.mjs  r2-setup.sh
src/: App.tsx  api.ts  changeNav.test.ts  changeNav.ts  fileTree.test.ts  fileTree.ts  find.test.ts  find.ts  highlight.test.ts  highlight.ts  icons.tsx  main.tsx  refreshPolicy.test.ts  refreshPolicy.ts  repoContext.tsx  shortcuts.ts  storage.test.ts  storage.ts  styles.css  theme.ts  types.ts  updater.ts  useFind.ts  useKeycapPresses.ts  useTooltips.ts  useVirtual.ts  util.test.ts  util.ts  vite-env.d.ts  wordDiff.test.ts  wordDiff.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  watch.rs
src-tauri/src/git/: avatars.rs  branch.rs  conflict.rs  diff.rs  files.rs  files.rs.bak  forge.rs  graph.rs  history.rs  mod.rs  ops.rs  rebase.rs  remotes.rs  repo.rs  sequencer.rs  submodule.rs  worktree.rs
src/components/: BlameView.tsx  ChangeList.tsx  CloneModal.tsx  CodeLine.test.tsx  CodeLine.tsx  CommandPalette.tsx  CommitFiles.tsx  ConflictViewer.tsx  CreatePrModal.tsx  DiffViewer.tsx  EmptyState.tsx  FileHistoryModal.tsx  FileView.tsx  FindBar.tsx  GraphView.tsx  Home.tsx  ImageView.tsx  RebasePlan.tsx  ReflogModal.tsx  RepoSkeleton.tsx  RepoView.tsx  SequencerBanner.tsx  Settings.tsx  ShortcutsModal.tsx  Sidebar.tsx  StagingPanel.tsx  TabBar.tsx  Toolbar.tsx  UndoBar.tsx  UpdateToast.tsx
src/fonts/: LICENSE
