[package]
name = "gitchef"
version = "0.1.0"
description = "Open-source visual Git client"
authors = ["GitChef"]
edition = "2021"

[lib]
name = "gitchef_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.dev]
incremental = true
