[package]
name = "gitchef"
version = "0.10.0"
description = "Open-source visual Git client"
authors = ["GitChef"]
edition = "2021"

[lib]
name = "gitchef_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
# Local reads only (status/graph/diff/commit); all network ops shell out to the
# git CLI. Dropping default features removes the libgit2 ssh/https transports and
# their openssl-sys dependency - which otherwise fails to cross-compile for the
# x86_64 half of the universal macOS build.
git2 = { version = "0.20", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Blocking HTTP for provider avatar lookups (GitHub REST / GitLab GraphQL). rustls
# TLS (ureq's default) keeps us off openssl-sys, same reason git2 drops its default
# features above - so the x86_64 half of the universal macOS build still links.
ureq = { version = "2", features = ["json"] }
# Guards the shared avatar cache across concurrent tab commands; parking_lot per
# project rule (guards returned directly, no poison-unwrap boilerplate).
parking_lot = "0.12"
thiserror = "2"

[profile.dev]
incremental = true
