[package]
name = "gitchef"
version = "0.30.0"
description = "Open-source visual Git client"
authors = ["GitChef"]
edition = "2021"

[lib]
name = "gitchef_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
# Local reads only (status/graph/diff/commit); all network ops shell out to the
# git CLI. Dropping default features removes the libgit2 ssh/https transports and
# their openssl-sys dependency - which otherwise fails to cross-compile for the
# x86_64 half of the universal macOS build.
git2 = { version = "0.20", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Blocking HTTP for provider avatar lookups (GitHub REST / GitLab GraphQL). rustls
# TLS (ureq's default) keeps us off openssl-sys, same reason git2 drops its default
# features above - so the x86_64 half of the universal macOS build still links.
ureq = { version = "2", features = ["json"] }
# Guards the shared avatar cache across concurrent tab commands; parking_lot per
# project rule (guards returned directly, no poison-unwrap boilerplate).
parking_lot = "0.12"
thiserror = "2"
# Filesystem watcher for the .git dir, so external git ops (CLI, other tools) and
# checkouts/commits reflect instantly without a manual refresh. -mini wraps notify
# with built-in debounce, collapsing the write burst a single git op produces into
# one event. macOS backend is FSEvents (no openssl), so it cross-compiles like the
# rest.
notify-debouncer-mini = "0.4"

[profile.dev]
incremental = true
